correccion de sign in php

--- a/src/signup.html
+++ b/src/signup.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="src/icon/escuela.png"
     <title>Schoolar-sign up</title>
+    <link rel="icon" type="image/png" href="src/icon/escuela.png">
 </head>
 <body>
     <center><h1> Register form</h1></center><br><br>
