--- a/src/signin.html
+++ b/src/signin.html
@@ -10,11 +10,9 @@
     <center><h1> Register form</h1></center><br><br>
     <form name="register-form" action="signin.php" method="post"> 
         <table broder ="0" align="center">
-            <tr><td><input type = "text" name = "f_name" placeholder="firstname" required></td></tr>
-            <tr><td><input type = "text" name = "l_name" placeholder="last name" required></td></tr>
             <tr><td><input type = "text" name = "e_mail" placeholder="joe@.com" required></td></tr>
             <tr><td><input type = "text" name = "passw" placeholder="***********" required></td></tr>
-            <tr><td align="center"><button>Register</button></td></tr>
+            <tr><td align="center"><button>LOGIN</button></td></tr>
         </table>
     </form>
 </body>
