correciones icons, etc.. falta de clase anterio actualizado

--- a/src/signup.html
+++ b/src/signup.html
@@ -14,6 +14,8 @@
             <tr><td><input type = "text" name = "l_name" placeholder="last name" required></td></tr>
             <tr><td><input type = "text" name = "e_mail" placeholder="joe@.com" required></td></tr>
             <tr><td><input type = "text" name = "passw" placeholder="***********" required></td></tr>
+            <tr><td><input type = "file" name = "file_photo" ></td></tr>
+
             <tr><td align="center"><button>Register</button></td></tr>
         </table>
     </form>
